# NyayaQuest

./: .gitattributes  .gitignore  Dockerfile  README.md  api.py  app.py  auto_ingest_implementation_plan.md.resolved  auto_ingest_ui.py  cache.py  chains.py  commands.txt  cpa_2019_eval_results.json  cpc_eval_results.json  delete_from_db.py  eval_hybrid_comparison.json  eval_output.txt  eval_report.json  eval_report_v2.json  eval_ui.py  explore_db.py  explore_db_ravi.py  hybrid_retriever.py  ingest_all.py  ingest_all_pdfs.py  labour_codes_eval_results.json  nyayaquest_main.py  package-lock.json  presentation_materials.md.resolved  prompts.py  pyproject.toml  render.yaml  scratch.py  system_eval_report.txt
chroma_db_groq_legal/2edf4269-25d7-457f-b079-685bcd5dc2db/: index_metadata.pickle
chroma_db_groq_legal/71073d47-b09a-4553-a906-019c654f0e93/: index_metadata.pickle
chroma_db_groq_legal/dea09821-39dc-46ca-9150-e3a9a4cd7169/: index_metadata.pickle
data/: quarantine_log.jsonl
data/test_data/: bns.json  cnfl.json  cpa.json  rti.json
docs/: ADDING_NEW_LAWS.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/: auth_utils.py  db_utils.py  download_legal_docs.py  evaluate_cpa.py  evaluate_labour_code_new.py  evaluate_labour_codes.py  evaluate_rag.py  evaluate_rag_v2.py  evaluate_rti.py  firebase_config.py  ingest_structural.py  test_db_laws.py  title_gen.py  ui_auth.py  verify_rti.py
src/auto_ingest/: __init__.py  config.py  orchestrator.py  prompts.py
tmp/: fix_json.py  write_json_clean.py  write_json_final.py
(+45 files in other folders)
